fixed the navbar on mobile and got the side nav working with it

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -165,7 +165,7 @@
   border-color: #303E4F;
   border-style: solid;
   border-width: 3px;
-  max-width: 95%;
+  // max-width: 95%;
   padding: 6px;
   li {
     font-size: 2em;
