--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -272,6 +272,7 @@
 
 .file-upload-inputs {
   margin-top: 10px;
+  margin-bottom: 15px;
 }
 
 .wide-button {
