--- a/app/assets/stylesheets/purchased_order.scss
+++ b/app/assets/stylesheets/purchased_order.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the purchased_order controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.order-detail-block {
+  margin-bottom: 2.5em;
+}
